--- a/myStyles.css
+++ b/myStyles.css
@@ -47,3 +47,15 @@ body{
     opacity: 0.6;
     z-index: -1;
 }
+
+/* MEDIA QUERIES */
+
+/*tablets*/
+@media screen and (max-width: 768px){
+
+}
+
+/*mobiles*/
+@media screen and (max-width: 480px){
+    
+}
