--- a/myStyles.css
+++ b/myStyles.css
@@ -1,51 +1,26 @@
-body{
-    background-image: url("milkyWay.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+/*Override bootstrap*/
+hr{
+    border-top: 1px solid white;
 }
 
+a{
+    color:white;
+}
 /* font-awesome icons */
 .fa {
-  padding: 12px;
-  font-size: 17px;
-  width: 40px;
-  text-align: center;
-  text-decoration: none;
-  margin: 1px 4px;
-  border-radius: 100%;
+    font-size: 2rem;
 }
 
 .fa:hover {
     opacity: 0.7;
 }
 
-.fa-linkedin {
-    background: #007bb5;
-    color: #343A40;
+.fa-linkedin-square{
+    color: #007bb5;
   }
 
-.fa-github{
-    background: #15AABF;
-    color: #343A40;
-}
-
-.navbar-nav > li > a {
-    padding-top:5px; 
-    padding-bottom:5px;}
-
-.navbar {
-    min-height:100px;
-}
-
-.myLayer {
-    background-color: black;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.6;
-    z-index: -1;
+.fa-github-square{
+    color: #4078c0;
 }
 
 /* MEDIA QUERIES */
